# scGRID

./: .gitignore  GNN_annotation_cli.R  LICENSE  README.md  cli.py  majority_vote.py  preprocess.py  pyproject.toml  scGRID_preprocessing.R  scGRID_train.py  scgrid-env.yml  scgrid-env_requirements.txt  scgrid_majority_vote.py  scgrid_test.py  scgrid_train.py  workflow.py
src/scgrid/: celloracle_run.py  scgrid_majority_vote.py  test.py  train.py
src/scgrid/r/: scGRID_preprocessing.R
