[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scgrid"
version = "0.1.0"
description = "scGRID: single-cell Gene Regulation-based IDentifier"
requires-python = ">=3.9"

[project.scripts]
scgrid = "scgrid.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scgrid = ["r/*.R"]
